--- a/article.html
+++ b/article.html
@@ -99,15 +99,15 @@
             <section class="article-section">
                 <div class="article-year-title">2025년</div>
                 <div class="article-list">
-                    <!-- <a href="#" target="_blank" class="article-link">바셀린</a>
-                    <a href="#" target="_blank" class="article-link">모르는 사람</a>
-                    <a href="#" target="_blank" class="article-link">oz Han</a>
-                    <a href="#" target="_blank" class="article-link">카이사르</a>
-                    <a href="#" target="_blank" class="article-link">릴라</a>
-                    <a href="#" target="_blank" class="article-link">양정훈</a>
-                    <a href="#" target="_blank" class="article-link">Retions</a>
-                    <a href="#" target="_blank" class="article-link">TB</a>
-                    <a href="#" target="_blank" class="article-link">사이키라</a> -->
+                    <a href="https://hansol072.tistory.com/10" target="_blank" class="article-link">바셀린</a>
+                    <a href="https://moru-is-person.tistory.com/45" target="_blank" class="article-link">모르는 사람</a>
+                    <a href="https://blog.naver.com/ozhan1121/224142981404" target="_blank" class="article-link">oz Han</a>
+                    <a href="https://kyser.tistory.com/23" target="_blank" class="article-link">카이사르</a>
+                    <a href="https://qyurila.github.io/blog/posts/otomad-top10-2025/" target="_blank" class="article-link">릴라</a>
+                    <a href="https://yang-otomad.tistory.com/16" target="_blank" class="article-link">양정훈</a>
+                    <a href="https://blog.naver.com/alcmfnrl/224145724172" target="_blank" class="article-link">Retions</a>
+                    <a href="https://isaac2020.tistory.com/3" target="_blank" class="article-link">TB</a>
+                    <a href="https://saikira.tistory.com/24" target="_blank" class="article-link">사이키라</a>
                 </div>
             </section>
 
